# modbus-grabber

./: README.md  main.py  pyproject.toml
app/: actions_exceptions.py  device_handler.py  make_modbus.py  parser.py  test.py
config/: settings.yml
